# starter-resource-server/src/generated/swagger.yml
@@ -67,50 +67,6 @@ definitions:
                 $ref: '#/definitions/UserPushBody'
             pull:
                 $ref: '#/definitions/UserPullBody'
-    Todo:
-        type: object
-        properties:
-            title:
-                type: string
-            done:
-                type: boolean
-            owner:
-                type: string
-            json:
-                type: object
-    TodoCreateBody:
-        type: object
-        properties:
-            title:
-                type: string
-            done:
-                type: boolean
-            json:
-                type: object
-    TodoChangesBody:
-        type: object
-        properties:
-            title:
-                type: string
-            done:
-                type: boolean
-            json:
-                type: object
-    TodoPushBody:
-        type: object
-    TodoPullBody:
-        type: object
-    TodoUpdateBody:
-        type: object
-        properties:
-            id:
-                type: string
-            changes:
-                $ref: '#/definitions/TodoChangesBody'
-            push:
-                $ref: '#/definitions/TodoPushBody'
-            pull:
-                $ref: '#/definitions/TodoPullBody'
     AddIdBody:
         type: object
         properties:
@@ -208,83 +164,10 @@ paths:
                     schema:
                 schema:
                   $ref: '#/definitions/User'
-
-    /todos:
-        get:
-            security:
-              - bearerAuth: []
-            tags: ['Todo']
-            description: "sample description"
-            responses:
-                '200':
-                    description: "not provided."
-                    schema:
-                schema:
-                  type: array
-                  items:
-                    $ref: '#/definitions/Todo'
-        post:
-            security:
-              - bearerAuth: []
-            tags: ['Todo']
-            description: "sample description"
-            parameters:
-                - name: body
-                  description: "Not provided"
-                  in: body
-                  schema:
-                    $ref: '#/definitions/TodoCreateBody'
-            responses:
-                '200':
-                    description: "not provided."
-                    schema:
-                schema:
-                  $ref: '#/definitions/Todo'
-    /todos/{id}:
-        get:
-            security:
-              - bearerAuth: []
-            tags: ['Todo']
-            description: "sample description"
-            parameters:
-                - name: id
-                  in: path
-                  required: true
-                  description: "Not provided"
-                  type: string
-            responses:
-                '200':
-                    description: "not provided."
-                    schema:
-                schema:
-                  $ref: '#/definitions/Todo'
-        put:
-            security:
-              - bearerAuth: []
-            tags: ['Todo']
-            description: "sample description"
-            parameters:
-                - name: id
-                  in: path
-                  required: true
-                  description: "Not provided"
-                  type: string
-
-                - name: body
-                  description: "Not provided"
-                  in: body
-                  schema:
-                    $ref: '#/definitions/TodoUpdateBody'
-            responses:
-                '200':
-                    description: "not provided."
-                    schema:
-                schema:
-                  $ref: '#/definitions/Todo'
         delete:
             security:
               - bearerAuth: []
-            tags: ['Todo']
+            tags: ['User']
             description: "sample description"
             parameters:
                 - name: id
@@ -297,23 +180,5 @@ paths:
                     description: "not provided."
                     schema:
                 schema:
-                  $ref: '#/definitions/Todo'
-    /todos/{id}/owner:
-        get:
-            security:
-              - bearerAuth: []
-            tags: ['Todo']
-            description: "sample description"
-            parameters:
-                - name: id
-                  in: path
-                  required: true
-                  description: "Not provided"
-                  type: string
-            responses:
-                '200':
-                    description: "not provided."
-                    schema:
-                schema:
-                  $ref: '#/definitions/Todo'
+                  $ref: '#/definitions/User'
 
